# Panopticon

./: .gitignore  Cargo.toml  README.md  SPEC-AGENT-ORCHESTRATION.md  SPEC.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
src/: lib.rs  main.rs  util.rs
src/agents/: merger.rs  mod.rs  unified_watcher.rs
src/config/: mod.rs
src/data/: mod.rs  sorting.rs
src/integrations/: agent_cache.rs  cache.rs  claude.rs  clawdbot.rs  enrichment_cache.rs  github.rs  linear.rs  mod.rs  vercel.rs
src/integrations/claude/: hook_input.rs  mod.rs  setup.rs  state.rs  watcher.rs
src/integrations/moltbot/: client.rs  mod.rs
src/integrations/openclaw/: mod.rs  state.rs  status.rs  watcher.rs
src/tui/: app.rs  input.rs  message.rs  mod.rs  search.rs  ui.rs
src/tui/keybindings/: dispatch.rs  help.rs  mod.rs  registry.rs
src/tui/ui/: icons.rs  layout.rs  menus.rs  mod.rs  modals.rs  status.rs  table.rs
tests/: agent_cache.rs  agent_type_rename.rs  build_visual_items.rs  claude_setup.rs  claude_state.rs  enrichment_cache_behavior.rs  filter_functionality.rs  github_status.rs  hierarchical_sort.rs  keybinding_dispatch.rs  linear_attachments.rs  linear_hierarchy.rs  linear_metadata.rs  linear_parsing.rs  navigation.rs  openclaw_state.rs  openclaw_status.rs  openclaw_watcher.rs  refresh_robustness.rs  tui_input.rs  tui_search.rs  unified_watcher.rs  vercel_url_encoding.rs
tests/test_utils/: claude_settings.rs  mod.rs
