[package]
name = "panopticon"
version = "0.1.0"
edition = "2021"
default-run = "panopticon"
description = "Terminal dashboard for monitoring AI agent sessions linked to Linear, GitHub, and Vercel"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Lazy initialization
once_cell = "1.19"

# GraphQL (for Linear subscriptions)
graphql_client = "0.14"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"
directories = "5"
dirs = "5"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Fuzzy search
nucleo = "0.5"

# Markdown parsing
pulldown-cmark = "0.9"

# Unicode display width calculations
unicode-width = "0.1"

# File watching (for Claude Code state)
notify = "7"

# File locking for atomic state writes
fs2 = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
